--- a/quotemachine/src/App.css
+++ b/quotemachine/src/App.css
@@ -1,16 +1,63 @@
+@import url("https://fonts.googleapis.com/css?family=Sniglet");
 * {
   margin: 0;
   padding: 0;
 }
 
+.App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: orangered;
+  font-family: "Sniglet", cursive;
+  height: 100vh;
+}
+
 #quote-box {
-  height: 100%;
-  width: 100%;
-  border: 1px solid black;
+  position: relative;
+  width: 450px;
+  background-color: white;
+  font-size: 22px;
+  padding: 40px 50px;
+  border-radius: 5px;
   text-align: center;
 }
 
-#quote-box button {
-  width: 15%;
+#quote-box #author {
+  font-size: 16px;
+  text-align: right;
+}
+
+#quote-box buttonhover {
+  opacity: 0.8;
+}
+
+#quote-box button#tweet-quote {
+  float: left;
+}
+
+#quote-box button#new-quote {
+  float: right;
+}
+
+.footer {
+  font-size: 0.9em;
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.footer a {
+  color: white;
 }
 /*# sourceMappingURL=App.css.map */
