--- a/quotemachine/src/App.css
+++ b/quotemachine/src/App.css
@@ -18,28 +18,28 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: orangered;
+  background-color: #db5400;
   font-family: "Sniglet", cursive;
   height: 100vh;
 }
 
 #quote-box {
   position: relative;
-  width: 450px;
-  background-color: white;
+  width: 600px;
+  background-color: whitesmoke;
   font-size: 22px;
   padding: 40px 50px;
   border-radius: 5px;
   text-align: center;
 }
 
+#quote-box #text i {
+  color: #ffe100;
+}
+
 #quote-box #author {
   font-size: 16px;
   text-align: right;
-}
-
-#quote-box buttonhover {
-  opacity: 0.8;
 }
 
 #quote-box button#tweet-quote {
@@ -59,5 +59,11 @@
 
 .footer a {
   color: white;
+}
+
+.footer a:hover {
+  text-decoration: none;
+  color: #ffe100;
+  font-size: 15px;
 }
 /*# sourceMappingURL=App.css.map */
