--- a/quotemachine/src/App.css
+++ b/quotemachine/src/App.css
@@ -42,11 +42,11 @@
   text-align: right;
 }
 
-#quote-box button#tweet-quote {
+#quote-box button#tweet-quote, #quote-box a#tweet-quote {
   float: left;
 }
 
-#quote-box button#new-quote {
+#quote-box button#new-quote, #quote-box a#new-quote {
   float: right;
 }
 
